--- a/1_image_classification/Try_various_VGG_models.ipynb
+++ b/1_image_classification/Try_various_VGG_models.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -103,11 +103,12 @@
    "source": [
     "OUTPUT_FEATURES = 2\n",
     "\n",
-    "LEARNING_RATE = 0.001\n",
-    "WEIGHT_DECAY = 5e-4\n",
-    "MOMENTUM = 0.5\n",
+    "OPTIMIZER_TYPE = 'Adam'\n",
+    "LEARNING_RATIO = 0.001\n",
+    "MOMENTUM = 0.0\n",
+    "WEIGHT_DECAY = 1e-3\n",
     "\n",
-    "NUM_EPOCHS = 8"
+    "NUM_EPOCHS = 30"
    ]
   },
   {
@@ -177,11 +178,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "def train_model(net, dataloaders_dict, criterion, optimizer, num_epochs):\n",
+    "def plot_history(name, history):\n",
+    "    fig, axes = plt.subplots(1, 2, figsize=(10, 4), tight_layout=True)\n",
+    "    axes[0].plot(\n",
+    "        range(len(history[\"train\"][\"loss\"])),\n",
+    "        history[\"train\"][\"loss\"],\n",
+    "        \"r-o\",\n",
+    "        label=f\"{name}-train\",\n",
+    "    )\n",
+    "    axes[0].plot(\n",
+    "        range(len(history[\"val\"][\"loss\"])),\n",
+    "        history[\"val\"][\"loss\"],\n",
+    "        \"b--s\",\n",
+    "        label=f\"{name}-val\",\n",
+    "    )\n",
+    "    axes[0].set_xlabel(\"Epochs\", size=14)\n",
+    "    axes[0].set_ylabel(\"Loss\", size=14)\n",
+    "    axes[0].tick_params(labelsize=12)\n",
+    "    axes[0].grid()\n",
+    "    axes[0].legend()\n",
+    "\n",
+    "    axes[1].plot(\n",
+    "        range(len(history[\"train\"][\"acc\"])),\n",
+    "        history[\"train\"][\"acc\"],\n",
+    "        \"r-o\",\n",
+    "        label=f\"{name}-train\",\n",
+    "    )\n",
+    "    axes[1].plot(\n",
+    "        range(len(history[\"val\"][\"acc\"])),\n",
+    "        history[\"val\"][\"acc\"],\n",
+    "        \"b--s\",\n",
+    "        label=f\"{name}-val\",\n",
+    "    )\n",
+    "    axes[1].set_xlabel(\"Epochs\", size=14)\n",
+    "    axes[1].set_ylabel(\"Accuracy\", size=14)\n",
+    "    axes[1].tick_params(labelsize=12)\n",
+    "    axes[1].grid()\n",
+    "    axes[1].legend()\n",
+    "    plt.suptitle(f\"{name}\", size=16)\n",
+    "    # plt.show()\n",
+    "    return fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def train_model(name, net, dataloaders_dict, criterion, optimizer, num_epochs):\n",
     "    # 初期設定\n",
     "    # GPUが使えるかを確認\n",
     "    device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
@@ -216,9 +269,9 @@
     "            epoch_loss = 0.0  # epochの損失和\n",
     "            epoch_corrects = 0  # epochの正解数\n",
     "\n",
-    "            # 未学習時の検証性能を確かめるため、epoch=0の訓練は省略\n",
-    "            if (epoch == 0) and (phase == \"train\"):\n",
-    "                continue\n",
+    "            # # 未学習時の検証性能を確かめるため、epoch=0の訓練は省略\n",
+    "            # if (epoch == 0) and (phase == \"train\"):\n",
+    "            #     continue\n",
     "\n",
     "            # データローダーからミニバッチを取り出すループ\n",
     "            for inputs, labels in tqdm(dataloaders_dict[phase]):\n",
@@ -252,6 +305,11 @@
     "            print(\"{} Loss: {:.4f} Acc: {:.4f}\".format(phase, epoch_loss, epoch_acc))\n",
     "            history[phase][\"loss\"].append(epoch_loss)\n",
     "            history[phase][\"acc\"].append(epoch_acc)\n",
+    "\n",
+    "            # MLflow: track metrics\n",
+    "            mlflow.log_metric(f\"{phase}_loss\", epoch_loss, step=epoch)  # Train Loss\n",
+    "            mlflow.log_metric(f\"{phase}_acc\", epoch_acc, step=epoch)  # Train Loss\n",
+    "\n",
     "    return history"
    ]
   },
@@ -288,10 +346,10 @@
    "outputs": [],
    "source": [
     "vgg_models = {\n",
-    "    \"vgg16\": (models.vgg16, models.VGG16_Weights.DEFAULT),\n",
-    "    \"vgg16_bn\": (models.vgg16_bn, models.VGG16_BN_Weights.DEFAULT),\n",
-    "    \"vgg19\": (models.vgg19, models.VGG19_Weights.DEFAULT),\n",
-    "    \"vgg19_bn\": (models.vgg19_bn, models.VGG19_BN_Weights.DEFAULT),\n",
+    "    \"vgg16\": {'model': models.vgg16, 'weights': models.VGG16_Weights.DEFAULT, 'layers': 16},\n",
+    "    \"vgg16_bn\": {'model': models.vgg16_bn, 'weights': models.VGG16_BN_Weights.DEFAULT, 'layers': 17},\n",
+    "    \"vgg19\": {'model': models.vgg19, 'weights': models.VGG19_Weights.DEFAULT, 'layers': 19},\n",
+    "    \"vgg19_bn\": {'model': models.vgg19_bn, 'weights': models.VGG19_BN_Weights.DEFAULT, 'layers': 20},\n",
     "}"
    ]
   },
@@ -545,7 +603,10 @@
    ],
    "source": [
     "vgg_results = {}\n",
-    "for name, (model, weights) in vgg_models.items():\n",
+    "for name, model_dict in vgg_models.items():\n",
+    "    model = model_dict['model']\n",
+    "    weights = model_dict['weights']\n",
+    "    \n",
     "    _net = model(weights=weights)\n",
     "    num_classifier_layers = len(_net.classifier)\n",
     "    last_in_features = _net.classifier[num_classifier_layers - 1].in_features\n",
